--- a/config/database.yml
+++ b/config/database.yml
@@ -84,4 +84,4 @@ production:
   <<: *default
   database: myapp_production
   username: myapp
-  password: <%= ENV["MYAPP_DATABASE_PASSWORD"] %>
+  url: <%= Rails.application.credentials.dig(:neon_url) %>
