--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "app",
   "private": true,
   "devDependencies": {
-    "esbuild": "^0.24.2",
-    "webpack-dev-server": "^3",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-private-methods": "^7.14.5",
-    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
+    "esbuild": "^0.24.2",
+    "webpack-dev-server": "^3"
   },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets",
@@ -16,14 +16,14 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.12",
+    "@rails/activestorage": "^6.1.4",
+    "@rails/ujs": "^6.1.4",
     "@rails/webpacker": "5.4.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.15",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
     "turbolinks": "^5.2.0",
-    "@rails/activestorage": "^6.1.4",
-    "@rails/ujs": "^6.1.4"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   }
 }
